# bigbang-inflator

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build-bb-manifest.sh  get-manifests.sh
src/bb_inflator/: __init__.py  cli.py
